--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,8 @@ jobs:
       ( contains(github.ref, 'master') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
       ( contains(github.ref, 'develop') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
       contains(github.event.head_commit.message, '[run-ci]')
+    env:
+      COSMOSCOUT_CODE_COVERAGE: true
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v1
@@ -50,6 +52,13 @@ jobs:
       run: ./make_externals.sh
     - name: Build CosmoScout VR
       run: ./make.sh
+    - name: Check Test Coverage
+      run: ./lcov.sh
+    - name: Upload Coverage Info
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: ./build/linux-release/coverage.info
 
   build_linux_clang:
     name: Linux Build (clang 6.0)
