--- a/test/cs-graphics/CMakeLists.txt
+++ b/test/cs-graphics/CMakeLists.txt
@@ -8,21 +8,14 @@
 
 file(GLOB SOURCE_FILES *.cpp */*.cpp)
 
-add_library(cs-scene SHARED
+add_library(cs-graphics-test SHARED
   ${SOURCE_FILES}
 )
 
-target_link_libraries(cs-scene
+target_link_libraries(cs-graphics-test
   PUBLIC
+    gli::gli
     cs-utils
-
-    cs-scene-test
 )
 
-install(TARGETS cs-scene DESTINATION lib)
-
-# export header ------------------------------------------------------------------------------------
-
-generate_export_header(cs-scene
-  EXPORT_FILE_NAME cs_scene_export.hpp
-)
+install(TARGETS cs-graphics-test DESTINATION lib)
