:wrench: Add doctest find script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,12 @@ else()
   SET(GLI_ROOT_DIR ${COSMOSCOUT_EXTERNALS_DIR})
 endif()
 
+if (DEFINED ENV{DOCTEST_ROOT_DIR})
+  SET(DOCTEST_ROOT_DIR "$ENV{DOCTEST_ROOT_DIR}")
+else()
+  SET(DOCTEST_ROOT_DIR ${COSMOSCOUT_EXTERNALS_DIR})
+endif()
+
 if (DEFINED ENV{TINYGLTF_ROOT_DIR})
   SET(TINYGLTF_ROOT_DIR "$ENV{TINYGLTF_ROOT_DIR}")
 else()
@@ -123,6 +129,7 @@ endif()
 
 find_package(GLM REQUIRED)
 find_package(GLI REQUIRED)
+find_package(DOCTEST REQUIRED)
 find_package(TINYGLTF REQUIRED)
 find_package(CSPICE REQUIRED)
 find_package(CARES REQUIRED)
