--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,10 +45,8 @@ jobs:
       - name: Cache Object Files
         uses: actions/cache@v1
         with:
-          path: ${{ env.HOME }}/.ccache
+          path: ${HOME}/.ccache
           key: linux-gcc
-      - name: Install CMake
-        run: sudo pip install cmake
       - name: Download Dependencies
         run: |
           sudo add-apt-repository ppa:mhier/libboost-latest
@@ -56,6 +54,7 @@ jobs:
           sudo apt-get install libc++-dev libgl1-mesa-dev libglu1-mesa-dev libx11-dev
           sudo apt-get install libxi-dev libgconf-2-4 libboost1.70-dev ccache
           sudo apt-get install -y lcov
+          sudo pip install cmake
       - name: Build Externals
         run: ./make_externals.sh -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
       - name: Build CosmoScout VR
@@ -86,16 +85,15 @@ jobs:
       - name: Cache Object Files
         uses: actions/cache@v1
         with:
-          path: ${{ env.HOME }}/.ccache
+          path: ${HOME}/.ccache
           key: linux-clang
-      - name: Install CMake
-        run: sudo pip install cmake
       - name: Download Dependencies
         run: |
           sudo add-apt-repository ppa:mhier/libboost-latest
           sudo apt-get update -q
           sudo apt-get install libc++-dev libgl1-mesa-dev libglu1-mesa-dev libx11-dev
           sudo apt-get install libxi-dev libgconf-2-4 libboost1.70-dev ccache
+          sudo pip install cmake
       - name: Build Externals
         env:
           CC: clang
@@ -125,14 +123,22 @@ jobs:
       - name: Cache Object Files
         uses: actions/cache@v1
         with:
-          path: ${{ env.HOME }}\\clcache
+          path: ${HOME}\\clcache
           key: windows-msvc
+      - name: Download Dependencies
+        run: pip install clcache
       - name: Build Externals
         shell: cmd
-        run: make_externals.bat -DCMAKE_CXX_COMPILER_LAUNCHER=clcache -DCMAKE_C_COMPILER_LAUNCHER=clcache
+        env:
+          CC: clcache
+          CXX: clcache
+        run: make_externals.bat
       - name: Build CosmoScout VR
         shell: cmd
-        run: make.bat -DCMAKE_CXX_COMPILER_LAUNCHER=clcache -DCMAKE_C_COMPILER_LAUNCHER=clcache
+        env:
+          CC: clcache
+          CXX: clcache
+        run: make.bat
       - name: Run Tests
         shell: cmd
         run: install\\windows-release\\bin\\run_all_tests.bat
