--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,10 +143,10 @@ jobs:
           where.exe clcache
       - name: Build Externals
         shell: cmd
-        run: make_externals.bat -G "Visual Studio 15 Win64" -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;CLToolPath=C:\Python37\Scripts;TrackFileAccess=false"
+        run: make_externals.bat -G "Visual Studio 15 Win64" -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false"
       - name: Build CosmoScout VR
         shell: cmd
-        run: make.bat -G "Visual Studio 15 Win64" -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;CLToolPath=C:\Python37\Scripts;TrackFileAccess=false"
+        run: make.bat -G "Visual Studio 15 Win64" -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false"
       - name: Run Tests
         shell: cmd
         run: install\\windows-release\\bin\\run_all_tests.bat
