--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v1
+      - name: Checkout Submodules
+        run: git submodule update --init plugins
       - name: Download Clang-Format
         run: |
           sudo apt-get update -y
@@ -33,6 +35,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v1
+      - name: Checkout Submodules
+        run: git submodule update --init plugins
       - name: Download Cloc
         run: |
           sudo apt-get update -y
