--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,44 +32,38 @@ jobs:
   comment_percentage:
     name: Check Comment Percentage
     runs-on: ubuntu-18.04
+    if: github.event_name == 'pull_request'
     steps:
       - name: Checkout Current Repository
         uses: actions/checkout@v2
         with:
           path: current
           ref: ${{ github.ref }}
-      - name: Checkout Reference Repository
-        if: github.event_name == 'pull_request'
+      - name: Checkout Base Repository
         uses: actions/checkout@v2
         with:
-          path: reference
+          path: base
           ref: ${{ github.base_ref }}
-      - name: Checkout Reference Repository
-        if: github.event_name == 'push'
-        uses: actions/checkout@v2
-        with:
-          path: reference
-          ref: ${{ github.event.before }}
       - name: Checkout Current Submodules
         run: cd $GITHUB_WORKSPACE/current && git submodule update --init plugins
-      - name: Checkout Reference Submodules
-        run: cd $GITHUB_WORKSPACE/reference && git submodule update --init plugins
+      - name: Checkout Base Submodules
+        run: cd $GITHUB_WORKSPACE/base && git submodule update --init plugins
       - name: Download Cloc
         run: |
           sudo apt-get update -y
           sudo apt-get install -y cloc
       - name: Run Cloc
         run: |
-          BEFORE="$(reference/cloc.sh --percentage-only)"
-          AFTER="$(current/cloc.sh --percentage-only)"
-          echo "Previous Percentage of Comments: $BEFORE"
-          echo "Current Percentage of Comments: $AFTER"
-          if (( $(echo "$BEFORE > $AFTER" |bc -l) ))
+          BASE="$(base/cloc.sh --percentage-only)"
+          CURRENT="$(current/cloc.sh --percentage-only)"
+          echo "Percentage of Comments in Base Repository: $BASE"
+          echo "Percentage of Comments after Merge: $CURRENT"
+          if (( $(echo "$BASE > $CURRENT" |bc -l) ))
           then
-            awk -v a=$AFTER -v b=$BEFORE 'BEGIN {printf "Percentage decreased! (%3.4f%)\n", (a-b)}'
+            awk -v a=$CURRENT -v b=$BASE 'BEGIN {printf "Percentage decreased! (%3.4f%)\n", (a-b)}'
             exit 1
           else
-            awk -v a=$AFTER -v b=$BEFORE 'BEGIN {printf "Percentage increased! (%3.4f%)\n", (a-b)}'
+            awk -v a=$CURRENT -v b=$BASE 'BEGIN {printf "Percentage increased! (%3.4f%)\n", (a-b)}'
           fi
 
   build_linux_gcc:
