:arrow_up_small: Update vestec plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,7 +49,13 @@
 [submodule "externals/openvr"]
 	path = externals/openvr
 	url = https://github.com/ValveSoftware/openvr.git
+[submodule "externals/vtk"]
+	path = externals/vtk
+	url = https://github.com/Kitware/VTK.git
+[submodule "externals/ttk"]
+	path = externals/ttk
+	url = https://github.com/topology-tool-kit/ttk.git
 [submodule "plugins/csp-vestec"]
 	path = plugins/csp-vestec
 	url = https://github.com/cosmoscout/csp-vestec.git
-
+	
