--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,9 @@
 [submodule "plugins/csp-vestec"]
 	path = plugins/csp-vestec
 	url = https://github.com/cosmoscout/csp-vestec.git
+[submodule "externals/vtk"]
+	path = externals/vtk
+	url = https://github.com/Kitware/VTK.git
+[submodule "externals/ttk"]
+	path = externals/ttk
+	url = https://github.com/topology-tool-kit/ttk.git
