--- a/.gitmodules
+++ b/.gitmodules
@@ -55,6 +55,9 @@
 [submodule "externals/ttk"]
 	path = externals/ttk
 	url = https://github.com/topology-tool-kit/ttk.git
+[submodule "externals/sqlite3"]
+	path = externals/sqlite3
+	url = https://github.com/azadkuh/sqlite-amalgamation.git
 [submodule "plugins/csp-vestec"]
 	path = plugins/csp-vestec
 	url = https://github.com/cosmoscout/csp-vestec.git
