--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "externals/ttk"]
 	path = externals/ttk
 	url = https://github.com/topology-tool-kit/ttk.git
+[submodule "externals/sqlite3"]
+	path = externals/sqlite3
+	url = https://github.com/azadkuh/sqlite-amalgamation.git
