--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "plugins/csp-atmospheres"]
 	path = plugins/csp-atmospheres
 	url = ../../cosmoscout/csp-atmospheres.git
+[submodule "plugins/csp-simple-wms-bodies"]
+	path = plugins/csp-simple-wms-bodies
+	url = ../../cosmoscout/csp-simple-wms-bodies.git
