--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,10 +122,10 @@ jobs:
       ( contains(github.ref, 'master') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
       ( contains(github.ref, 'develop') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
       contains(github.event.head_commit.message, '[run-ci]')
+    env:
+      CC: clang-8
+      CXX: clang++-8
     steps:
-      - env:
-          CC: clang-8
-          CXX: clang++-8
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Checkout Submodules
@@ -167,9 +167,9 @@ jobs:
       ( contains(github.ref, 'master') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
       ( contains(github.ref, 'develop') && !contains(github.event.head_commit.message, '[no-ci]') ) ||
       contains(github.event.head_commit.message, '[run-ci]')
+    env:
+      BOOST_ROOT: $BOOST_ROOT_1_69_0
     steps:
-      - env:
-          BOOST_ROOT: $BOOST_ROOT_1_69_0
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Checkout Submodules
