--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,8 @@ jobs:
   release_windows:
     name: Windows
     runs-on: windows-2016
+    env:
+      BOOST_ROOT: $BOOST_ROOT_1_69_0
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
