--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,7 +99,7 @@ jobs:
         run: >
           ./make.sh -G "Unix Makefiles" 
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache 
-          -DCOSMOSCOUT_COVERAGE_INFO=On -DCOSMOSCOUT_UNIT_TESTS=On
+          -DCOSMOSCOUT_COVERAGE_INFO=On -DCOSMOSCOUT_UNIT_TESTS=On -DBOOST_ROOT=$BOOST_ROOT_1_72_0
       - name: Run Tests
         run: ./install/linux-release/bin/run_tests.sh
       - name: Run Graphical Tests
@@ -155,7 +155,7 @@ jobs:
         run: >
           ./make.sh -G "Unix Makefiles" 
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache 
-          -DCOSMOSCOUT_UNIT_TESTS=On
+          -DCOSMOSCOUT_UNIT_TESTS=On -DBOOST_ROOT=$BOOST_ROOT_1_72_0
       - name: Run Tests
         run: ./install/linux-release/bin/run_tests.sh
       - name: Run Graphical Tests
