--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,9 +39,9 @@ jobs:
         sudo apt-get install libc++-dev libgl1-mesa-dev libglu1-mesa-dev libx11-dev
         sudo apt-get install libxi-dev libgconf-2-4
     - name: Build Externals
-      run: ./make_externals.sh
+      run: ./make_externals.sh -G "Unix Makefiles"
     - name: Build CosmoScout VR
-      run: ./make.sh
+      run: ./make.sh -G "Unix Makefiles" -DBOOST_ROOT=$BOOST_ROOT_1_69_0
     - name: Create Release
       run: | 
         mv install/linux-release cosmoscout-vr
