:wrench: modified interaction ini and install vrpn

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -4,9 +4,9 @@
 
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
-DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR
+DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, VRPN
 INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION
-DUMPDFNGRAPHS       = FALSE
+DUMPDFNGRAPHS       = TRUE
 
 
 ###################### interaction contexts ###########################
