:wrench: modified interaction ini and install vrpn

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -4,7 +4,7 @@
 
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
-DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, VRPN
+DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER
 INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION
 DUMPDFNGRAPHS       = TRUE
 
@@ -66,3 +66,39 @@ SENSORS             = SPACENAV_MAIN
 
 [SPACENAV_MAIN]
 RAWID               = 0
+
+#----------------------------------------------------------------------
+
+[XBOXCONTROLLER]
+TYPE                = VRPN
+HISTORY             = 10
+SENSORS             = microsoft0
+
+# For Xbox 360 Controller:
+#	Analog channel assignments:
+# 0=left joystick X
+# 1=left joystick Y
+# 2=right joystick X
+# 3=right joystick Y
+# 4=triggers (left goes positive, right goes negative)
+# 5=Point of View Hat heading (-1=nothing, 0=North, 45=Northeast, etc.)
+#	Button number assignments
+# 0=A
+# 1=B
+# 2=X
+# 3=Y
+# 4=left bump
+# 5=right bump
+# 6=Back
+# 7=Start
+# 8=left joystick
+# 9=right joytick
+# Next four are point of view hat buttons
+# 10=Up
+# 11=Right
+# 12=Down
+# 13=Left
+#
+# There is one argument:
+#	char	name_of_this_device[]
+# vrpn_Microsoft_Controller_Raw_Xbox_360 microsoft0
