:wrench: add VRPN driver and uncomment vrpn_Microsoft_Controller_Raw_Xbox_360 microsoft0 in vrpn.cfg

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -71,8 +71,18 @@ RAWID               = 0
 
 [XBOXCONTROLLER]
 TYPE                = VRPN
-HISTORY             = 10
-SENSORS             = microsoft0
+HISTORY             = 0
+SENSORS             = XBOX_BUTTON, XBOX_ANALOG
+
+[XBOX_BUTTON]
+TYPE                = BUTTON
+NAME                = microsoft0@localhost
+RAWID               = 0
+
+[XBOX_ANALOG]
+TYPE                = ANALOG
+NAME                = microsoft0@localhost
+RAWID               = 0
 
 # For Xbox 360 Controller:
 #	Analog channel assignments:
