:wrench: renamed interaction context to match mouse and vive

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -5,7 +5,7 @@
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
 DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERNAVIGATION
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT
 DUMPDFNGRAPHS       = TRUE
 
 
@@ -35,9 +35,9 @@ GRAPH               = xml/spacenavigator_navigation.xml
 ROLE                = KEYBOARDNAVIGATION
 GRAPH               = xml/keyboard_navigation.xml
 
-[VRPNCONTROLLERNAVIGATION]
-ROLE                = VRPN_CONTROLLERNAVIGATION
-GRAPH               = xml/vrpn_controller_navigation.xml
+[VRPNCONTROLLERINPUT]
+ROLE                = VRPN_CONTROLLER_INPUT
+GRAPH               = xml/gamepad_standardinput.xml
 
 ######################## device drivers ###############################
 
