:wrench: move gamepad debug to separate dfn

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -5,7 +5,7 @@
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
 DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION
 DUMPDFNGRAPHS       = TRUE
 
 
@@ -38,6 +38,10 @@ GRAPH               = xml/keyboard_navigation.xml
 [VRPNCONTROLLERINPUT]
 ROLE                = VRPN_CONTROLLER_INPUT
 GRAPH               = xml/gamepad_standardinput.xml
+
+[VRPNCONTROLLERNAVIGATION]
+ROLE                = VRPN_CONTROLLER_NAVIGATION
+GRAPH               = xml/gamepad_navigation.xml
 
 ######################## device drivers ###############################
 
