:wrench: change mouse movement to dpad and add controller debug dfn

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -35,6 +35,10 @@ GRAPH               = xml/spacenavigator_navigation.xml
 ROLE                = KEYBOARDNAVIGATION
 GRAPH               = xml/keyboard_navigation.xml
 
+[VRPNCONTROLLERDEBUG]
+ROLE                = VRPN_CONTROLLER_DEBUG
+GRAPH               = xml/gamepad_debug.xml
+
 [VRPNCONTROLLERINPUT]
 ROLE                = VRPN_CONTROLLER_INPUT
 GRAPH               = xml/gamepad_standardinput.xml
