:wrench: add xinput driver

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -4,8 +4,8 @@
 
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
-DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION, MOUSECONTROLLERSELECTOR
+DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER, XINPUTCONTROLLER
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION, MOUSECONTROLLERSELECTOR, VRPNXINPUTDEBUG
 DUMPDFNGRAPHS       = TRUE
 
 
@@ -46,6 +46,10 @@ GRAPH               = xml/gamepad_standardinput.xml
 [VRPNCONTROLLERNAVIGATION]
 ROLE                = VRPN_CONTROLLER_NAVIGATION
 GRAPH               = xml/gamepad_navigation.xml
+
+[VRPNXINPUTDEBUG]
+ROLE                = VRPN_XINPUT_DEBUG
+GRAPH               = xml/xinput_debug.xml
 
 [MOUSECONTROLLERSELECTOR]
 ROLE                = MOUSE_CONTROLLER_NEGOTIATOR
@@ -98,4 +102,21 @@ RAWID               = 0
 [XBOX_ANALOG]
 TYPE                = ANALOG
 NAME                = microsoft0@localhost
+RAWID               = 0
+
+#----------------------------------------------------------------------
+
+[XINPUTCONTROLLER]
+TYPE                = VRPN
+HISTORY             = 0
+SENSORS             = XINPUT_BUTTON, XINPUT_ANALOG
+
+[XINPUT_BUTTON]
+TYPE                = BUTTON
+NAME                = XInput0@localhost
+RAWID               = 0
+
+[XINPUT_ANALOG]
+TYPE                = ANALOG
+NAME                = XInput0@localhost
 RAWID               = 0
