:truck: Move transfer function editor from volume rendering plugin to core

--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -7,11 +7,12 @@
 
 # assets -------------------------------------------------------------------------------------------
 
-install(DIRECTORY "models"    DESTINATION "share/resources")
-install(DIRECTORY "textures"  DESTINATION "share/resources")
-install(DIRECTORY "gui"       DESTINATION "share/resources")
-install(DIRECTORY "icons"     DESTINATION "share/resources")
-install(DIRECTORY "locations" DESTINATION "share/resources")
+install(DIRECTORY "models"            DESTINATION "share/resources")
+install(DIRECTORY "textures"          DESTINATION "share/resources")
+install(DIRECTORY "gui"               DESTINATION "share/resources")
+install(DIRECTORY "icons"             DESTINATION "share/resources")
+install(DIRECTORY "locations"         DESTINATION "share/resources")
+install(DIRECTORY "transferfunctions" DESTINATION "share/resources")
 
 # chromium embedded framework ----------------------------------------------------------------------
 
