--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,10 +174,12 @@ install(
 
 # Copy boost libraries to install directory.
 foreach(BOOST_LIB ${Boost_LIBRARIES})
+message("found " ${BOOST_LIB})
   if(EXISTS "${BOOST_LIB}")
     get_filename_component(LIB_BASE_NAME ${BOOST_LIB} NAME_WE)
     get_filename_component(LIB_PATH ${BOOST_LIB} PATH)
     if (WIN32)
+    message("install "  ${BOOST_LIB})
       install(FILES ${LIB_PATH}/${LIB_BASE_NAME}.dll DESTINATION "lib")
     endif()
     if (UNIX)
